--- a/jenkinsfile
+++ b/jenkinsfile
@@ -83,6 +83,13 @@ environment {
                echo '<--------------- Docker Publish Ended --------------->'  
             }
         }
-    }   
+    } 
+   stage(" Deploy ") {
+       steps {
+         script {
+            sh './deploy.sh'
+         }
+       }
+     }   
 }
 }
